# llm-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/notes/: README.md
src/attention/: README.md  causal_self_attention.py  multi_head_attention.py  self_attention.py
src/embeddings/: README.md  positional.py
src/feedforward/: README.md  mlp.py  mlp_gelu_implementation.py  swiglu.py
src/inference/: README.md
src/models/: README.md  gpt.py  gpt_groupquery_attention.py  gpt_multihead_attention_kvcache.py  gpt_multihead_latent_attention.py  gpt_multiquery_attention.py  gpt_one_file.py
src/normalization/: README.md  layer_norm.py
src/tokenizer/: README.md  bpe.py  bpe_from_scratch.py
src/training/: README.md
src/utils/: README.md
tests/: README.md  test_bpe.py  test_bpe_from_scratch.py  test_causal_self_attention.py  test_gpt.py  test_layer_norm.py  test_mlp.py  test_mlp_gelu_implementation.py  test_multi_head_attention.py  test_positional.py  test_self_attention.py  test_swiglu.py
