[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "From-scratch implementation of LLM components, from GPT to DeepSeek"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
